--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,6 +7,8 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <!-- fontawesome-->
+        <script src="https://kit.fontawesome.com/f9f05d10ba.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <noscript>
